--- a/the-reading-room/index.html
+++ b/the-reading-room/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Sashay Away</title>
+    <script src='services/api.js'></script>
+    <script src='services/domElements.js'></script>
+    <script src='models/queen.js'></script>
+    <script src='app.js'></script>
     <script defer src='index.js'></script>
     <link rel="stylesheet" href="index.css">
   </head>
