--- a/the-reading-room/index.html
+++ b/the-reading-room/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sashay Away</title>
+    <title>The Reading Room</title>
     <script defer src='index.js'></script>
     <link rel="stylesheet" href="index.css">
   </head>
