--- a/the-reading-room/index.html
+++ b/the-reading-room/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sashay Away</title>
+    <title>The Reading Room</title>
     <script src='services/api.js'></script>
     <script src='services/domElements.js'></script>
     <script src='models/queen.js'></script>
