--- a/the-reading-room/index.html
+++ b/the-reading-room/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>The Reading Room</title>
+    <title>The Reading Room</title> 
+    <script src='models/queen.js'></script>
     <script defer src='index.js'></script>
     <link rel="stylesheet" href="index.css">
   </head>
